# spyglass

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Contributors.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run.py  setup.cfg  spyglass.py
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-and-package.yml  check-commit-message.yml  pull-request.yml  release.yml
docs/: CONTRIBUTING.md  camera-controls.md  contributors.md
docs/adr/: 001_encoder.md
resources/: controls_style.css  spyglass.conf  spyglass.service
scripts/: spyglass
spyglass/: __init__.py  __main__.py  camera.py  camera_options.py  cli.py  exif.py  server.py  url_parsing.py  usbCamera.py  usbServer.py
spyglass/camera/: __init__.py  camera.py  csi.py  usb.py  webcam_test.py
spyglass/server/: controls.py  http_server.py  jpeg.py  webrtc_whep.py
tests/: test_cli.py  test_exif.py  test_url_parsing.py
