[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
mock_use_standalone_module = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.13.0"
tag_format = "v$version"
version_files = [
    "spyglass/__version__.py",
    "setup.cfg:version",
    "pyproject.toml:version",
    "README.md:Current version"
]
