[metadata]
name = spyglass
version = 0.13.0
description = A simple mjpeg server for Picamera2
url = https://github.com/roamingthings/spyglass
license = GPL-3.0-only
license_files =
   LICENSE
   NOTICE

[options]
packages = find:
python_requires = >=3.8.1

[options.entry_points]
console_scripts =
    spyglass = spyglass.cli:main
